assets/css/main.css
/* ... */
.comingsoon-wrapper .product-info-overlay {
  background: rgba(255, 255, 255, 0.8);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: all 0.25s ease-in;
}

.comingsoon-wrapper:hover .product-info-overlay,
.comingsoon-wrapper:focus .product-info-overlay{
  opacity: 1;
}

.comingsoon-wrapper .overlay-content {
  position: absolute;
  left: 0;
  top: 50%;
  width: 100%;
  transform: translateY(-50%);
  text-align: center;
}

.comingsoon-wrapper {
  position: relative;
  margin: auto;
  margin-bottom: 30px;
  padding: 0 20px;
}

.comingsoon-wrapper .img-responsive {
  margin: auto;
}

.comingsoon-wrapper .text-overlay {
  font-family: "PT Serif", serif;
  font-size: 22px;
  font-style: italic;
  font-weight: 700;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -15px;
  margin-left: -40px;
  color: #fff;
  text-shadow: 0 1px 2px rgba(20, 20, 20, 0.2);
}

.comingsoon-name{
  font-family: "Montserrat", sans-serif;
  color: #73532f;
  text-transform: uppercase;

}
.bottom-section .section-title {
  color: #b68e65;
  font-style: italic;
  margin-bottom: 90px;
}
.about-bottom-section .section-title-aboutUs {
  color: #b68e65;
  font-style: italic;
  margin-bottom: 30px;
  font-family: "PT Serif", serif;
  font-size: 22px;
  font-weight: 700;
}

.bottom-section .section-content {
  position: relative;
  color: #73532f;
  font-weight: 500;
  font-size: 14px;
}

.about-bottom-section .bottom-section {
  display: flex;
  align-items: center;
  justify-content: center;
}

.produce-section .section-title {
  color: #b48c65;
  font-style: italic;
  margin-bottom: 90px;
}

.produce-section .section-content {
  position: relative;
  color: #73532f;
  font-weight: 500;
}

.logo-container {
  text-align: center;
  margin-right: 100px;
}

.footer-section {
  background-color: #ede9e7;
  background-image: url("../images/texture-background.png");
}

.footer-section .img-responsive {
  display: block;
  margin: 0 auto;
  max-width: 160px;
  margin-bottom: 30px;
}

ul.footer-links {
  display: inline-block;
  padding: 0;
}

.footer-links {
  list-style-type: none;
  /* text-align: left; */
}

.footer-links li a {
  display: inline-block;
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  color: #73532f;
  outline: 0;
  margin-bottom: 5px;
  text-decoration: none !important;
}

.footer-links-wrapper {
  display: inline-block;
}

.horizontal-rule {
  display: block;
  width: 100%;
  height: 1.5px;
  background-image: url("../images/line.png");
  background-repeat: repeat-x;
  margin-top: 10px;
  margin-bottom: 10px;
}

hr {
  background-color: #aa8265;
  height: 1px;
}

/* .payment-options {
  text-align: center;
} */

.footer-section .control-label,
.footer-label {
  font-size: 12px;
  font-weight: 500;
  color: #aa8265;
}

.btn-subscribe {
  position: absolute;
  bottom: 0;
  right: 0;
  background-color: transparent;
  border: 0;
  outline: 0;
  width: 40px;
  height: 40px;
}

.copytext {
  font-weight: 500;
  color: #aa8265;
  float: right;
}

.screen-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(10, 10, 10, 0.25);
  text-align: center;
  color: #fff;
  display: none;
  z-index: 2000;
}

.screen-overlay .loading {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 320px;
  transform: translate(-50%, -50%);
}

.screen-overlay p {
  position: absolute;
  top: 50%;
  font-family: "Montserrat", sans-serif;
  width: 100%;
  font-weight: 500;
  left: 0;
  color: #fff;
  text-align: center;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
  margin-top: 40px;
  z-index: 2500;
}

.social-media-links li a {
  display: inline-block;
  width: 40px;
  height: 40px;
  outline: 0;
  background-image: url("../images/social-media-sprites.png");
  background-size: 200%;
  background-repeat: no-repeat;
  background-position: 0 0;
  text-decoration: none !important;
  transition: all 0.25s ease-in-out;
}

.social-media-links > li {
  padding: 0;
  margin-right: -5px;
}

/* .social-media-links li.whatsapp a {
  background-position: 0 0;
} */

.social-media-links li.facebook a {
  background-position: 0 -45px;
}

.social-media-links li.twitter a {
  display: inline-block;
  width: 39px;
  height: 38px;
  outline: 0;
  background-image: url("../images/twitter.png");
  background-size: 75%;
  background-repeat: no-repeat;
  /* background-position: 0 0; */
  text-decoration: none !important;
  transition: all 0.25s ease-in-out;
}

.social-media-links li.pinterest a {
  display: inline-block;
  width: 40px;
  height: 40px;
  outline: 0;
  background-image: url("../images/pinterest.png");
  background-size: 75%;
  background-repeat: no-repeat;
  /* background-position: 0 0; */
  text-decoration: none !important;
  transition: all 0.25s ease-in-out;
}

.social-media-links li.instagram a {
  background-position: -45px 0;
}

/* .social-media-links li.youtube a {
  background-position: -45px -45px;
} */

.list-options li {
  display: inline-block;
  width: 60px;
  height: 40px;
  background-size: 600%;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-position: top left;
  background-image: url("../images/payment-sprites.png");
  /* margin-right: 10px; */
}

.list-options {
  padding-left: 0;
  /* padding-right: 40px; */
}

.list-options li.master {
  background-position: 5px 0;
}

.list-options li.visa {
  background-position: -226px 5px;
}

.list-options li.cod {
  background-position: -101px 4px;
}

.list-options li.netbanking {
  background-position: -47px 5px;
}

.list-options li.paypal {
  background-position: -293px 8px;
}

.list-options li.amx {
  background-position: -162px 6px;
}

.list-shipping li {
  display: inline-block;
  width: 120px;
  height: 40px;
  background-size: 300%;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-position: top left;
  background-image: url("../images/shipping-sprites.png");
  margin-right: 10px;
}
/* ... */

